data/derived/comb/progs/unify/prog7112.ml.out
Characters 176-180:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
